--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "wx-lodash",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "微信公众号工具类",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/bugszhou/wx-utils/issues"
   },
-  "homepage": "https://github.com/bugszhou/wx-utils#readme"
+  "homepage": "https://github.com/bugszhou/wx-utils#readme",
+  "dependencies": {
+    "@babel/runtime-corejs2": "^7.5.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/plugin-transform-strict-mode": "^7.2.0",
+    "@babel/preset-env": "^7.5.0",
+    "babel-loader": "^8.0.6",
+    "terser-webpack-plugin": "^1.3.0",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
+  }
 }
